Aligning to correct DS6 font family (#91)

--- a/docs/static/ds6/skin.css
+++ b/docs/static/ds6/skin.css
@@ -27,7 +27,7 @@ https://github.com/eBay/skin/blob/master/LICENSE.txt"
 body {
   background-color: #ffffff;
   color: #111820;
-  font-family: "Helvetica Neue", Helvetica, Arial, Roboto, sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 0.875rem;
 }
 a {
@@ -37,7 +37,7 @@ a:visited {
   color: #6a4fcc;
 }
 body {
-  font-family: "Market Sans", "Helvetica Neue", Helvetica, Arial, Roboto, sans-serif;
+  font-family: "Market Sans", Arial, sans-serif;
 }
 button.btn,
 button.expand-btn,
